# synthetic-xi-2026

./: .env.example  .gitignore  CLOUDFLARE.md  COMPLETE_FINAL_IMPLEMENTATION.md  COMPLETE_FINAL_PREFLIGHT.md  COMPLETE_FINAL_RULES_FIX_V1_1.md  COMPLETE_FINAL_YELLOW_CARD_MEASUREMENT_V1.md  DEFINITIVE_REAL_VS_AI_PROTOCOL.md  ENRICHMENT.md  ESTUDIO_1_POSICIONES.md  ESTUDIO_2_ONCE.md  ESTUDIO_ANUAL_METODOLOGIA_ES.md  IDENTIFIED_SET_SIMULATION_PLAN.md  METHODOLOGY_CORRECTION_EXACT_WINDOW_COVERAGE.md  METHODS.md  OPEN_AUDIT_V2.md  PAPER_DRAFT_V2_ES.md  PLAN_V05_ANUAL.md  POSITION_ONTOLOGY_CODEBOOK_ES.md  PRERREGISTRO.md  PROTOCOLO_FINAL_COMPLETA.md  README.md  SCIENTIFIC_VALIDITY_NOTICE.md  SIMULATOR_METHODS_ES.md  TU_PARTE.md  pyproject.toml  requirements.txt
.bootstrap/: part00  part01  part02  part03  part04  part05  part06  part07
config/: complete_final_preflight_tolerances_v1.json  complete_final_preflight_v1.json  complete_final_rules_fix_v1_1.json  complete_final_yellow_card_measurement_v1.json
docs/: RESEARCH_AND_PAPER_ROADMAP.md
ops/: immediate-residual-trigger.txt  resolve-selection-challengers-run-manifest.json  resolve-selection-challengers-run.txt  resolve-selection-challengers-trigger-branch.txt  resolve-selection-challengers-trigger.txt  selection-challenger-resolution-method.txt
paper/: EXACT_WINDOW_COVERAGE_CORRECTION.md  FINAL_SCIENTIFIC_RESULTS.md  IDENTIFIED_SET_RESULTS.md  generated_scientific_results.tex
scripts/: analyze_adaptive_extraction.py  analyze_annual_coverage.py  api_football_batch_client.py  audit_annual_coverage.py  refresh_2026.py  (+40 more)
(+509 files in other folders)
